--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,433 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
+
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NA MU</title>
+    <link
+      rel="title icon"
+      href="images/favicon.png"
+      type="img/icon">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
+  <body class="page__body">
+    <nav class="page__nav nav" id="nav">
+      <div class="nav__top">
+        <a class="nav__close-button" href="#">
+          <img src="./images/cross.png" alt="close menu">
+        </a>
+        <div class="nav__links grid--nav-links">
+          <a href="#gallery" class="nav__link">Галерея</a>
+          <a href="#subscribe" class="nav__link">Про нас</a>
+          <a href="#events" class="nav__link">Виставки та події</a>
+          <a href="#contacts" class="nav__link">Контакти</a>
+        </div>
+      </div>
+      <div class="nav__shedule">
+        Графік роботи
+        <br><br>
+        <span class="span__bold">12:00 — 20:00</span> середа
+        <br>
+        <span class="span__bold">12:00 — 20:00</span> четвер
+        <br>
+        <span class="span__bold">12:00 — 20:00</span> п’ятниця
+        <br>
+        <span class="span__bold">11:00 — 19:00</span> субота
+        <br>
+        <span class="span__bold">11:00 — 19:00</span> неділя
+      </div>
+      <br>
+      <div class="nav__text">
+        <span class="span__bold">Вихідні:</span> понеділок, вівторок
+        <br>
+        Каса припиняє роботу за 1 годину
+        до закриття музею
+      </div>
+    </nav>
+
+    <header class="page__content header" id="header">
+      <a class="header__burger menu" href="#nav">
+        <img
+          class="header__burger-button"
+          src="./images/burger.png"
+          alt="menu opener">
+      </a>
+      <div class="header__logo logo">
+        <a href="#">
+          NA<br>MU
+        </a>
+      </div>
+    </header>
+
+    <main>
+      <section class="page__museum museum" id="museum">
+        <div class="container__museum">
+          <picture class="museum__picture">
+            <source media="(min-width: 1280px)" srcset="./images/museum-lap.png">
+            <source media="(min-width: 768px)" srcset="./images/museum-tab.png">
+            <img
+              src="./images/museum-mob.png"
+              alt="museum"
+              class="museum__img">
+          </picture>
+        </div>
+        <h1 class="museum__name">
+          ХУДОЖНІЙ
+          <br>
+          МУЗЕЙ
+        </h1>
+        <a href="#events" class="page__content museum__button button">
+          <div class="button__text">
+            КВИТКИ
+          </div>
+          <div class="button__arrow">
+            <img 
+              src="./images/arrow.svg"
+              alt="Arrow"
+              class="button__arrow-img">
+          </div>
+        </a>
+        <a href="#events" class="museum__events-link">
+          ПОДІЇ
+        </a>
+      </section>
+
+      <section class="events page__content" id="events">
+        <div class="events__title">
+          Актуальні події
+        </div>
+        <div class="events__event events__event--1">
+          <div class="events__image-container">
+            <picture>
+              <source media="(min-width: 768px)" srcset="./images/events/event-1-tab.png">
+              <source media="(min-width: 1025px)" srcset="./images/events/event-1-lap.png">
+              <img
+                src="./images/events/event-1.png"
+                class="events__img events__img--1"
+                alt="1">
+            </picture>
+          </div>
+          <div class="events__description">
+            <div class="events__event-top">
+              <div class="events__event-title">
+                ВИСТАВКА
+              </div>
+              <div class="events__event-dates">
+                26.08-29.11.2019
+              </div>
+            </div>
+            <div class="events__event-name">
+              Йду і повертаюсь
+              <div class="events__event-name-dot">
+                <img src="./images/dot-orange.png" alt="dot">
+              </div>
+            </div>
+            <p class="events__event-paragraph">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво
+              другої половини 1980-1995 років.
+            </p>
+          </div>
+        </div>
+        <div class="events__event events__event--2">
+          <div class="events__image-container">
+            <picture>
+              <source media="(min-width: 768px)" srcset="./images/events/event-2-tab.png">
+              <source media="(min-width: 1025px)" srcset="./images/events/event-2-lap.png">
+            </picture>
+            <img
+              src="./images/events/event-2.png"
+              class="events__img events__img--2"
+              alt="2">
+          </div>
+          <div class="events__description">
+            <div class="events__event-top">
+              <div class="events__event-title">
+                ВИСТАВКА
+              </div>
+              <div class="events__event-dates">
+                26.08-29.11.2019
+              </div>
+            </div>
+            <div class="events__event-name">
+              І спогади і мрії
+              <div class="events__event-name-dot">
+                <img src="./images/dot-orange.png" alt="dot">
+              </div>
+            </div>
+            <p class="events__event-paragraph">
+              Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни
+              Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="events__event events__event--3">
+        <div class="events__image-container--3">
+          <picture>
+            <source media="(min-width: 768px)" srcset="./images/events/event-3-tab.png">
+            <source media="(min-width: 1025px)" srcset="./images/events/event-3-lap.png">
+            <img
+              src="./images/events/event-3.png"
+              class="events__img events__img--3"
+              alt="3">
+          </picture>
+        </div>
+        <div class="events__event-top events__event-top--lecture">
+          <div class="events__lecture-title">
+            <div class="events__event-title events__event-title--3">
+              ЛЕКЦІЯ
+            </div>
+            <div class="events__event-dates events__event-dates--3">
+              26/08/2019 - 11:00
+            </div>
+          </div>
+          <div class="events__event-name events__event-name--3">
+            Від класицизму до романтизму
+          </div>
+        </div>
+      </section>
+
+      <section class="page__content page__gallery gallery" id="gallery">
+        <div class="gallery__title">
+          Галерея
+        </div>
+        <div class="swiper slider">
+          <div class="swiper-container slider__container">
+            <div class="swiper-wrapper slider__wrapper">
+              <div class="swiper-slide slider__slide">
+                <div class="image-slider__image">
+                  <picture>
+                    <source media="(min-width: 768px)" srcset="./images/gallery/gallery2.png">
+                    <img
+                      src="./images/gallery/gallery1.png"
+                      alt="gallery photo"
+                      class="gallery__img">
+                  </picture>
+                </div>
+              </div>
+              <div class="swiper-slide slider__slide">
+                <div class="image-slider__image">
+                  <picture>
+                    <source media="(min-width: 768px)" srcset="./images/gallery/gallery2-1.png">
+                    <img
+                      src="./images/gallery/gallery1-1.png"
+                      alt="gallery photo"
+                      class="gallery__img">
+                  </picture>
+                </div>
+              </div>
+              <div class="swiper-slide slider__slide">
+                <div class="image-slider__image">
+                  <picture>
+                    <source media="(min-width: 768px)" srcset="./images/gallery/gallery2-2.png">
+                    <img
+                      src="./images/gallery/gallery1-2.png"
+                      alt="gallery photo"
+                      class="gallery__img">
+                  </picture>
+                </div>
+              </div>
+              <div class="swiper-slide slider__slide">
+                <div class="image-slider__image">
+                  <picture>
+                    <source media="(min-width: 768px)" srcset="./images/gallery/gallery2-3.png">
+                    <img
+                      src="./images/gallery/gallery1-3.png"
+                      alt="gallery photo"
+                      class="gallery__img">
+                  </picture>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+
+        <div class="gallery__slider grid--gallery">
+          <div class="gallery__slide grid__item--laptop-1-4">
+            <picture>
+              <source media="(min-width: 768px)" srcset="./images/gallery/gallery2.png">
+              <img
+                src="./images/gallery/gallery1.png"
+                alt="gallery photo"
+                class="gallery__img">
+            </picture>
+          </div>
+          <div class="gallery__slide grid__item--laptop-5-12">
+            <picture>
+              <source media="(min-width: 768px)" srcset="./images/gallery/gallery2-1.png">
+              <img
+                src="./images/gallery/gallery1-1.png"
+                alt="gallery photo"
+                class="gallery__img">
+            </picture>
+          </div>
+          <div class="gallery__slide grid__item--laptop-1-8">
+            <picture>
+              <source media="(min-width: 768px)" srcset="./images/gallery/gallery2-2.png">
+              <img
+                src="./images/gallery/gallery1-2.png"
+                alt="gallery photo"
+                class="gallery__img">
+            </picture>
+          </div>
+          <div class="gallery__slide grid__item--laptop-9-12">
+            <picture>
+              <source media="(min-width: 768px)" srcset="./images/gallery/gallery2-3.png">
+              <img
+                src="./images/gallery/gallery1-3.png"
+                alt="gallery photo"
+                class="gallery__img">
+            </picture>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__subscribe subscribe" id="subscribe">
+        <div class="subscribe__block">
+          <div class="subscribe__title">Підписка</div>
+          <div class="subscribe__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </div>
+
+          <form
+            action="#"
+            autocomplete="off"
+            class="subscribe__form"
+         >
+            <input
+              name="email"
+              type="email"
+              class="subscribe__input"
+              placeholder="E-mail"
+              required>
+            <button class="subscribe__button">
+              <img src="./images/button-arrow.svg" alt="button">
+            </button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer page__content">
+      <div class="container__footer container__footer--border grid grid--footer grid--footer-mob" id="blog">
+        <a
+          class="footer__logo logo--footer grid__item--1-1 grid__item--tablet-1-1 grid__item--footer grid__item--laptop-1-1"
+          href="#"
+       >
+            NA
+          <br>
+            MU
+        </a>
+
+        <div class="footer__soc-media grid__item--2-2 grid__item--tablet-1-1 grid__item--laptop-1-1 grid__item--footer">
+          <a
+            href="https://www.facebook.com/namu.museum/"
+            rel="noopener"
+            target="_blank"
+            class="footer__facebook"
+         ></a>
+          <a
+            href="https://www.instagram.com/namu.museum/"
+            rel="noopener"
+            target="_blank"
+            class="footer__instagram"
+         ></a>
+        </div>
+
+        <div class="footer__shedule grid__item--1-1 grid__item--tablet-2-3 grid__item--laptop-3-4 grid__item--footer">
+          Графік роботи
+          <br><br>
+          <span class="span__bold">12:00 — 20:00</span>
+          середа
+          <br>
+          <span class="span__bold">12:00 — 20:00</span>
+          четвер
+          <br>
+          <span class="span__bold">12:00 — 20:00</span>
+          п’ятниця
+          <br>
+          <span class="span__bold">11:00 — 19:00</span>
+          субота
+          <br>
+          <span class="span__bold">11:00 — 19:00</span>
+          неділя
+          <br><br>
+          Вихідні понеділок, вівторок
+          <br>
+          Каса припиняє роботу за 1 годину
+          до закриття музею
+        </div>
+
+        <div class="footer__contacts grid__item--2-2 grid__item--tablet-4-5 grid__item--laptop-5-6 grid__item--footer"
+          id="contacts">
+          Контакти:
+          <br>
+          <br>
+          <a
+            href="https://goo.gl/maps/LHc1uuGg8T3ddgpQ6"
+            rel="noopener"
+            class="footer__contacts-link"
+         >
+            вул. М. Грушевського, 6; Київ,
+            <span class="span__break--tablet">01001</span>
+          </a>
+          <a href="tel:+38 (044) 278-13-57" class="footer__contacts-link">
+            <span class="span__break--mobile span__break--tablet span__break--laptop">
+              тел. +38 (044)
+              <span class="span__break--mobile">278-13-57</span>
+            </span>
+          </a>
+          <a href="tel:+38 (044) 278-74-54" class="footer__contacts-link">
+            <span class="span__break--tablet span__break--laptop">
+            </span>факс +38 (044)
+            <span class="span__break--mobile">278-74-54
+            </span>
+          </a>
+          <a href="mailto:info@namu.kiev.ua" class="footer__contacts-link">
+            <span class="span__break--tablet span__break--laptop">
+              e-mail:
+              <span class="span__break--mobile">info@namu.kiev.ua</span>
+            </span>
+          </a>
+        </div>
+
+        <div class="container__button">
+          <a class="button__home" href="#"></a>
+        </div>
+      </div>
+
+      <div class="container__footer--nav footer__nav--laptop-padding grid grid--footer grid--footer-mob grid--nav grid__item--start">
+        <div class="footer__border-container grid__item--laptop-1-1"></div>
+        <ul class="footer__nav grid grid__item--1-1 grid__item--tablet-2-3 grid__item--laptop--2-4">
+          <li class="footer__nav-item">
+            <a href="#gallery">Галерея</a>
+          </li>
+          <li class="footer__nav-item">
+            <a href="#events">Виставки та події</a>
+          </li>
+        </ul>
+        <ul class="footer__nav grid grid__item--2-2 grid__item--tablet-4-5 grid__item--laptop-4-6">
+          <li class="footer__nav-item">
+            <a href="#subscribe">Про Нас</a>
+          </li>
+          <li class="footer__nav-item">
+            <a href="#contacts">Контакти</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+
+    <!-- <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script> -->
+    <!-- <script type="text/javascript" src="/scripts/slick.min.js"></script> -->
+    <!-- <script src="https://kenwheeler.github.io/slick/slick/slick.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
