--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,455 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="icon" href="./images/icons/NA MU.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="header__image">
+
+          </div>
+
+          <div class="header__nav grid grid--tablet grid--desktop">
+            <a href="#menu" class="header__nav__icon icon icon--menu"></a>
+            <a href="#" class="header__nav-logo logo grid__item--tablet-4-5 grid__item--desktop-6-7">
+              <img
+                class="logo__image"
+                src="./images/icons/NA MU.svg"
+                alt="NA MU"
+              >
+            </a>
+          </div>
+
+          <div class="grid grid--tablet grid--desktop">
+
+            <h1 class="header__title grid__item--tablet-1-3 grid__item--desktop-1-5">
+              Художній
+              <br>
+              музей
+            </h1>
+            <div class=" tickets grid__item--tablet-1-3 grid__item--desktop-3-5">
+              <a
+                href="https://ru-ru.facebook.com/namu.museum/"
+                class="tickets__button button"
+                target="_blank"
+              >
+                <img
+                  class="button__arrow"
+                  src="./images/icons/arrow.svg"
+                  alt="Arrow"
+                >
+              </a>
+              <div class="tickets__name">
+                Квитки
+              </div>
+            </div>
+            <div class="header__side">
+              <div class="header__line"></div>
+              <a class="header__events" href="#events">Події</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <nav class="menu" id="menu">
+      <div class="menu__green">
+        <div class="container">
+          <div class="menu__content">
+
+            <div class="menu__nav">
+              <a href="#" class="menu__icon icon icon--cross"></a>
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a class="menu__link" href="#galery">Галерея</a>
+                </li>
+                <li class="menu__item">
+                  <a class="menu__link" href="#subscription">Про Нас</a>
+                </li>
+                <li class="menu__item">
+                  <a class="menu__link" href="#events">Виставки та події</a>
+                </li>
+                <li class="menu__item">
+                  <a class="menu__link" href="#contacts">Контакти</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="menu__line"></div>
+
+            <div class="schedule schedule--menu">
+              <div class="schedule__block">
+                <div class="schedule__name">
+                  Графік роботи
+                </div>
+
+                <ul class="schedule__list">
+                  <li class="schedule__days">
+                    <span class="schedule__time">12:00 — 20:00</span> середа
+                  </li>
+                  <li class="schedule__days">
+                    <span class="schedule__time">12:00 — 20:00</span> четвер
+                  </li>
+                  <li class="schedule__days">
+                    <span class="schedule__time">12:00 — 20:00</span> п’ятниця
+                  </li>
+                  <li class="schedule__days">
+                    <span class="schedule__time">11:00 — 19:00</span> субота
+                  </li>
+                  <li class="schedule__days">
+                    <span class="schedule__time">11:00 — 19:00</span> неділя
+                  </li>
+                </ul>
+              </div>
+
+              <p class="schedule__weekends schedule__weekends--menu">
+                <span class="schedule__time">Вихідні:</span> понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </p>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <main>
+      <section class="events" id="events">
+        <div class="container">
+          <h2 class="page__section-title">
+            Актуальні події
+          </h2>
+          <div class="developments grid grid--desktop">
+            <img
+              class="developments__picture grid__item--desktop-1-7"
+              src="./images/Rectangle 2.1.png"
+              alt="Landscape"
+            >
+            <div class="developments__grid grid__item--desktop-9-12">
+              <div class="developments__description">
+                <div class="developments__name">ВИСТАВКА</div>
+                <div class="developments__date">26.08-29.11.2019</div>
+              </div>
+              <h3 class="developments__title">
+                Йду і повертаюсь
+              </h3>
+              <p class="developments__par">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+
+          <div class="developments grid grid--desktop">
+            <img
+              class="developments__picture grid__item--desktop-1-7"
+              src="./images/Rectangle 4.1.png"
+              alt="Landscape"
+            >
+            <div class="developments__grid grid__item--desktop-9-12">
+              <div class="developments__description">
+                <div class="developments__name">ВИСТАВКА</div>
+                <div class="developments__date">26.08-29.11.2019</div>
+              </div>
+              <h3 class="developments__title">
+                І спогади і мрії
+              </h3>
+              <p class="developments__par">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="classic">
+          <img
+            class="classic__picture"
+            src="./images/Rectangle 20.png"
+            alt="Sky"
+          >
+          <div class="classic__block">
+            <div class="classic__description">
+              <div class="classic__name">ЛЕКЦІЯ</div>
+              <div class="classic__date">26/08/2019 - 11:00</div>
+            </div>
+
+            <h3 class="classic__title">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </div>
+
+
+        </div>
+
+      </section>
+
+      <section class="galery" id="galery">
+        <div class="container">
+          <h2 class="page__section-title">
+            Галерея
+          </h2>
+          <div class="slider">
+            <div class="galery__grid grid grid--tablet ">
+              <img
+                class="
+                  slider__image
+                  slider__image--1
+                  grid__item
+                  grid__item--tablet-1-3
+                  grid__item--desktop-1-4
+                "
+                src="./images/Rectangle 13.5.png"
+                alt="Image 1"
+              >
+              <img
+                class="
+                  slider__image
+                  slider__image--2
+                  grid__item
+                  grid__item--tablet-4-6
+                "
+                src="./images/Rectangle 24.1.png"
+                alt="Image 2"
+              >
+              <img
+                class="
+                  slider__image
+                  slider__image--3
+                  grid__item
+                  grid__item--desktop-5-12
+                "
+                src="./images/Rectangle 3.1.png"
+                alt="Image 3"
+              >
+            </div>
+            <div class="grid grid--desktop">
+              <img
+                class="
+                  slider__image
+                  slider__image--4
+                  grid__item
+                  grid__item--desktop-1-8
+                "
+                src="./images/Rectangle 13.3.png"
+                alt="Image 4"
+              >
+              <img
+                class="
+                  slider__image
+                  slider__image--5
+                  grid__item
+                  grid__item--desktop-9-12
+                "
+                src="./images/Rectangle 13.4.png"
+                alt="Image 5"
+              >
+            </div>
+          </div>
+          <div class="galery__buttons">
+            <a href="#" class="galery__round"></a>
+            <a href="#" class="galery__round"></a>
+            <a href="#" class="galery__round"></a>
+            <a href="#" class="galery__round"></a>
+          </div>
+
+        </div>
+      </section>
+
+      <section class="subscription" id="subscription">
+        <h2 class="page__section-title subscription__title">
+          Підписка
+        </h2>
+        <p class="subscription__par">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+        <form
+          action="#"
+          class="subscription__form"
+          id="form"
+        >
+          <input
+            class="subscription__input"
+            type="email"
+            placeholder="E-mail"
+            name="email"
+            required
+            >
+          <button class="button subscription__button">
+            <img
+              class="button__arrow"
+              src="./images/icons/arrow-black.svg"
+              alt="Arrow"
+            >
+          </button>
+        </form>
+      </section>
+    </main>
+
+    <footer class="footer" id="contacts">
+      <div class="container">
+        <div class="footer__content grid grid--tablet grid--desktop">
+
+          <div class="
+            footer__top
+            grid__item-1-2
+            grid__item--tablet-1-1
+            grid__item--desktop-1-1
+          ">
+            <a href="#">
+              <img
+                class="logo__image"
+                src="./images/icons/NA MU.svg"
+                alt="NA MU"
+              >
+            </a>
+            <div class="footer__socials">
+              <a
+                href="https://ru-ru.facebook.com/namu.museum/"
+                target="_blank"
+              >
+                <svg class="footer__facebook" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M2.7198 4.64899C2.7198 5.2538 2.7198 7.9533 2.7198 7.9533H0.302734V11.9938H2.7198V24.0009H7.68498V11.9942H11.0168C11.0168 11.9942 11.3289 10.0568 11.4801 7.93841C11.0465 7.93841 7.70375 7.93841 7.70375 7.93841C7.70375 7.93841 7.70375 5.58776 7.70375 5.17573C7.70375 4.76282 8.24511 4.2074 8.78017 4.2074C9.31423 4.2074 10.4414 4.2074 11.4854 4.2074C11.4854 3.65727 11.4854 1.75647 11.4854 0.000976577C10.0917 0.000976577 8.50612 0.000976577 7.80721 0.000976577C2.59707 0.000697581 2.7198 4.04524 2.7198 4.64899Z">
+                </svg>
+
+              </a>
+              <a
+                href="https://www.instagram.com/namu.museum/"
+                target="_blank"
+              >
+                <svg class="footer__instagram" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M17.5908 0H6.58397C3.0017 0 0.0874023 2.9143 0.0874023 6.49657V17.5036C0.0874023 21.0857 3.0017 24 6.58397 24H17.591C21.1731 24 24.0874 21.0857 24.0874 17.5036V6.49657C24.0874 2.9143 21.1731 0 17.5908 0V0ZM12.0874 18.5623C8.46886 18.5623 5.52507 15.6185 5.52507 12C5.52507 8.38145 8.46886 5.43767 12.0874 5.43767C15.7059 5.43767 18.6497 8.38145 18.6497 12C18.6497 15.6185 15.7059 18.5623 12.0874 18.5623ZM18.8066 6.98528C17.7373 6.98528 16.8675 6.11553 16.8675 5.04619C16.8675 3.97686 17.7373 3.10693 18.8066 3.10693C19.8759 3.10693 20.7459 3.97686 20.7459 5.04619C20.7459 6.11553 19.8759 6.98528 18.8066 6.98528Z">
+                </svg>
+              </a>
+            </div>
+          </div>
+
+          <div class="
+            footer__schedule
+            schedule
+            grid__item-1-1
+            grid__item--tablet-2-3
+            grid__item--desktop-3-4
+          ">
+            <div class="schedule__block schedule__block--footer">
+              <div class="schedule__name">
+                Графік роботи
+              </div>
+
+              <ul class="schedule__list">
+                <li class="schedule__days">
+                  <span class="schedule__time">12:00 — 20:00</span> середа
+                </li>
+                <li class="schedule__days">
+                  <span class="schedule__time">12:00 — 20:00</span> четвер
+                </li>
+                <li class="schedule__days">
+                  <span class="schedule__time">12:00 — 20:00</span> п’ятниця
+                </li>
+                <li class="schedule__days">
+                  <span class="schedule__time">11:00 — 19:00</span> субота
+                </li>
+                <li class="schedule__days">
+                  <span class="schedule__time">11:00 — 19:00</span> неділя
+                </li>
+              </ul>
+            </div>
+
+            <p class="schedule__weekends">
+              <span class="schedule__time">Вихідні:</span> понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+
+          </div>
+
+          <div class="
+            footer__contacts
+            grid__item-2-2
+            grid__item--tablet-4-5
+            grid__item--desktop-5-6
+          ">
+            <div class="footer__contacts-name">
+              Контакти:
+            </div>
+            <a href="https://goo.gl/maps/2CZczWa1j64qyerT8" class="footer__contacts-us">
+              вул. М. Грушевського, 6;
+              Київ, 01001
+            </a>
+            <a href="tel:+38 (044) 278-13-57" class="footer__contacts-us">
+              тел. +38 (044) 278-13-57
+            </a>
+            <a href="tel:+38 (044) 278-74-54" class="footer__contacts-us">
+              факс +38 (044) 278-74-54
+            </a>
+            <a href="mailto:info@namu.kiev.ua" class="footer__contacts-us">
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+
+          <a class="footer__arrow grid__item-2-2" href="#"></a>
+
+          <div class="
+            footer__line
+            grid__item-1-2
+            grid__item--tablet-2-5
+            grid__item--desktop-7-7
+          "></div>
+
+          <ul class="
+            footer__list
+            grid__item-1-1
+            grid__item--tablet-2-3
+            grid__item--desktop-8-9
+          ">
+            <li class="footer__item">
+              <a class="footer__link" href="#galery">Галерея</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#events">Виставки та події</a>
+            </li>
+          </ul>
+
+          <ul class="
+            footer__list
+            grid__item-2-2
+            grid__item--tablet-4-4
+            grid__item--desktop-10-10
+         ">
+            <li class="footer__item">
+              <a class="footer__link" href="#subscription">Про Нас</a>
+            </li>
+            <li class="footer__item">
+              <a class="footer__link" href="#contacts">Контакти</a>
+            </li>
+          </ul>
+
+        </div>
+
+        <div class="footer__copyright">
+          <div class="footer__copyright-item">
+            Copyright © 2022. All Rights Reserved.
+          </div>
+          <div class="footer__copyright-item">
+            Designed by Zhyriada Marina
+          </div>
+
+        </div>
+      </div>
+    </footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
