--- a/src/index.html
+++ b/src/index.html
@@ -179,6 +179,26 @@
               </div>
             </div>
           </div>
+
+          <div class="current-events__lecture lecture">
+            <div class="lecture__photo-container">
+              <img
+                src="./images/photos/lecture.jpg"
+                alt="lecture"
+                class="lecture__photo"
+              >
+            </div>
+
+            <div class="lecture__info">
+              <div class="lecture__top-info">
+                <div class="lecture__type">ЛЕКЦІЯ</div>
+
+                <div class="lecture__date">26/08/2019 - 11:00</div>
+              </div>
+
+              <h3 class="lecture__title">Від класицизму до романтизму</h3>
+            </div>
+          </div>
         </div>
       </section>
 
